--- a/Speech-Recognition-Demo/Speech-Recognition-Demo/Base.lproj/Main.storyboard
+++ b/Speech-Recognition-Demo/Speech-Recognition-Demo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="OKu-LW-6Op">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -21,30 +21,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Alchohol Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qhA-uw-76w">
-                                <rect key="frame" x="44" y="265" width="200" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="onEnter:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="nqs-oR-xrm"/>
-                                </connections>
-                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Sp-Dj-ge7">
-                                <rect key="frame" x="283" y="265" width="49" height="30"/>
+                                <rect key="frame" x="250" y="246" width="80" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Submit"/>
                                 <connections>
                                     <action selector="OnClickSubmit:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3pq-6K-3vv"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WxM-1e-skQ">
-                                <rect key="frame" x="160" y="28" width="54" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Study B"/>
-                                <connections>
-                                    <segue destination="OKu-LW-6Op" kind="show" id="4gR-KH-Z6l"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z9r-zX-3J2">
@@ -54,8 +36,36 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TQH-k9-SGg">
+                                <rect key="frame" x="149.5" y="111" width="76" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="When the box is opened please write down all the items inside in a comma seperated list. Hit Enter when you are done." textAlignment="center" lineBreakMode="clip" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SyX-AZ-bj2">
+                                <rect key="frame" x="0.0" y="140" width="375" height="61"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Alchohol Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qhA-uw-76w">
+                                <rect key="frame" x="38" y="246" width="150" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="onEnter:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="nqs-oR-xrm"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="TQH-k9-SGg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2NU-DU-OcF"/>
+                            <constraint firstItem="TQH-k9-SGg" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="91" id="Jab-bH-xV6"/>
+                            <constraint firstItem="SyX-AZ-bj2" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="iAc-tU-FbP"/>
+                            <constraint firstItem="SyX-AZ-bj2" firstAttribute="top" secondItem="TQH-k9-SGg" secondAttribute="bottom" constant="8" id="sW1-hG-dgH"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="SubmitWritten" destination="9Sp-Dj-ge7" id="fsA-iO-adS"/>
@@ -65,7 +75,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="247" y="-107"/>
+            <point key="canvasLocation" x="245.59999999999999" y="-107.49625187406298"/>
         </scene>
         <!--Speech Detection View Controller-->
         <scene sceneID="F13-Ig-wCr">
@@ -79,8 +89,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WyY-TD-kaE">
-                                <rect key="frame" x="131.5" y="100" width="112.5" height="67"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WyY-TD-kaE">
+                                <rect key="frame" x="131" y="239" width="112.5" height="67"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                                 <state key="normal" title="Start / Stop">
@@ -97,22 +108,22 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gvW-PK-A3E">
-                                <rect key="frame" x="154" y="32" width="54" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eeb-xf-INO">
+                                <rect key="frame" x="149" y="95" width="76" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Study A"/>
-                                <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="NQ3-Lc-jLX"/>
-                                </connections>
-                            </button>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="When the box is opened, please hit the Start Button. Speaks the words into the Phone. The words interpreted will show up below." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8gJ-9f-qNy">
+                                <rect key="frame" x="8" y="124" width="375" height="75"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="WyY-TD-kaE" firstAttribute="centerY" secondItem="qAg-pY-ufg" secondAttribute="centerY" multiplier="0.4" id="Apq-2e-VCs"/>
-                            <constraint firstItem="WyY-TD-kaE" firstAttribute="width" secondItem="qAg-pY-ufg" secondAttribute="width" multiplier="0.3" id="PmI-GT-rOQ"/>
-                            <constraint firstItem="WyY-TD-kaE" firstAttribute="height" secondItem="qAg-pY-ufg" secondAttribute="height" multiplier="0.1" id="Va1-SX-rYm"/>
-                            <constraint firstItem="WyY-TD-kaE" firstAttribute="centerX" secondItem="qAg-pY-ufg" secondAttribute="centerX" id="odO-DL-vxC"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="startButton" destination="WyY-TD-kaE" id="x2K-AW-ACl"/>
@@ -121,7 +132,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jRA-M6-Fhj" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="156" y="562"/>
+            <point key="canvasLocation" x="245.59999999999999" y="540.17991004497753"/>
         </scene>
     </scenes>
 </document>
